--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="title" content="NOMBRE DUPLA">
-<title>NOMBRE DUPLA</title>
+<meta name="title" content="LAS K">
+<title>LAS K</title>
 <!-- Search Engine -->
-<meta name="description" content="cambiar">
+<meta name="Nos gusta el diseño gráfico, industrial y la mota" content="cambiar">
 <meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="cambiar">
@@ -26,7 +26,7 @@
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
 <!--no confundir con la imagen representativa del sitio-->
-<link rel="icon" type="image/png" href="media/favicon.png" />	
+<link rel="icon" type="image/png" href="media/favicon.png" />
 <!--ahora vinculamos los estilos-->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:300,600" rel="stylesheet">
 <link rel="stylesheet" href="estilo.css" type="text/css">
@@ -34,8 +34,8 @@
 <body>
 <div id="contenido">
 <header>
-	<h1>NOMBRE DUPLA</h1>
-	<h2>pongan aquí su slogan winner</h2>
+	<h1>LAS K</h1>
+	<h2>Nos gusta el diseño gráfico, industrial y la mota</h2>
 </header>
 <video autoplay loop preload="auto" poster="media/video.jpg">
 	<source src="media/video.webm" type="video/webm">
@@ -45,10 +45,10 @@
 <h3>QUIENES SOMOS</h3>
 <div id="somos">
 	<div class="dupla primera">
-		<h4>NOMBRE APELLIDO</h4>
-		<h5>Slogan personal winner</h5>
+		<h4>PILAR SAAVEDRA</h4>
+		<h5>picopalquelee</h5>
 		<p>Praesent euismod et urna vitae aliquam aliquam.</p>
-		<address><a href="mailto:mail@mail.com">mail@mail.com</a></address>
+		<address><a href="mailto:pmsaavedra@uc.cl>pmsaavedra@uc.cl</a></address>
 	</div><!--/dupla primera-->
 	<div class="dupla segunda">
 		<h4>NOMBRE APELLIDO</h4>
