--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <div id="somos">
 	<div class="dupla primera">
 		<h4>PILAR SAAVEDRA</h4>
-		<h5>picopalquelee</h5>
-		<p>Praesent euismod et urna vitae aliquam aliquam.</p>
+		<h5>pilarfundamental</h5>
+		<p>estudiante de diseño, minor en estudios patrimoniales, interesada en diseño gráfico y editorial</p>
 		<address><a href="mailto:pmsaavedra@uc.cl>pmsaavedra@uc.cl</a></address>
 	</div><!--/dupla primera-->
 	<div class="dupla segunda">
