--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 		<address><a href="mailto:pmsaavedra@uc.cl>pmsaavedra@uc.cl</a></address>
 	</div><!--/dupla primera-->
 	<div class="dupla segunda">
-		<h4>"JOSEFA DE LA FUENTE"</h4>
-		<h5>Slogan personal winner</h5>
+		<h4>JOSEFA DE LA FUENTE</h4>
+		<h5>aJO picante</h5>
 		<p>Suspendisse dapibus aliquam lorem ac congue.</p>
 		<address><a href="mailto:mail@mail.com">mail@mail.com</a></address>
 	</div><!--/dupla segunda-->
