--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<h4>JOSEFA DE LA FUENTE</h4>
 		<h5>aJO picante</h5>
 		<p>Suspendisse dapibus aliquam lorem ac congue.</p>
-		<address><a href="mailto:mail@mail.com">mail@mail.com</a></address>
+		<address><a href="jadelafuente@uc.cl">jadelafuente@uc.cl</a></address>
 	</div><!--/dupla segunda-->
 	<hr />
 </div><!--/somos-->
