--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="title" content="LAS K">
 <title>LAS K</title>
 <!-- Search Engine -->
-<meta name="Nos gusta el diseño gráfico, industrial y la mota" content="cambiar">
+<meta name="Nos gusta el diseño gráfico, industrial y la mo" content="cambiar">
 <meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="cambiar">
@@ -28,13 +28,13 @@
 <!--no confundir con la imagen representativa del sitio-->
 <link rel="icon" type="image/png" href="media/favicon.png" />
 <!--ahora vinculamos los estilos-->
-<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli:300,600,900" rel="stylesheet">
 <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
 <body>
 <div id="contenido">
 <header>
-	<h1>LAS K</h1>
+	<h1>SKT 1</h1>
 	<h2>Nos gusta el diseño gráfico, industrial y la mota</h2>
 </header>
 <video autoplay loop preload="auto" poster="media/video.jpg">
@@ -48,7 +48,7 @@
 		<h4>PILAR SAAVEDRA</h4>
 		<h5>pilarfundamental</h5>
 		<p>estudiante de diseño, minor en estudios patrimoniales, interesada en diseño gráfico y editorial</p>
-		<address><a href="mailto:pmsaavedra@uc.cl>pmsaavedra@uc.cl</a></address>
+		<address><a href="mailto:pmsaavedra@uc.cl">pmsaavedra@uc.cl</address>
 	</div><!--/dupla primera-->
 	<div class="dupla segunda">
 		<h4>JOSEFA DE LA FUENTE</h4>
