--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="title" content="LAS K">
 <title>LAS K</title>
 <!-- Search Engine -->
-<meta name="Nos gusta el diseño gráfico, industrial y la mo" content="cambiar">
+<meta name="Nos gusta el diseño gráfico, industrial y la mota" content="cambiar">
 <meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="cambiar">
@@ -42,19 +42,19 @@
 	<source src="media/video.mp4" type="video/mp4">
 	<p>Tu navegador no soporta el elemento, actualízate.</p>
 </video>
-<h3>QUIENES SOMOS</h3>
+<h3>SOBRE NOSOTRAS</h3>
 <div id="somos">
 	<div class="dupla primera">
 		<h4>PILAR SAAVEDRA</h4>
 		<h5>pilarfundamental</h5>
-		<p>estudiante de diseño, minor en estudios patrimoniales, interesada en diseño gráfico y editorial</p>
-		<address><a href="mailto:pmsaavedra@uc.cl">pmsaavedra@uc.cl</address>
+		<p>Estudiante de diseño, minor en estudios patrimoniales, interesada en diseño gráfico y editorial</p>
+		<address><a href="mailto:pmsaavedra@uc.cl">pmsaavedra@uc.cl</a></address>
 	</div><!--/dupla primera-->
 	<div class="dupla segunda">
 		<h4>JOSEFA DE LA FUENTE</h4>
-		<h5>aJO picante</h5>
-		<p>Suspendisse dapibus aliquam lorem ac congue.</p>
-		<address><a href="jadelafuente@uc.cl">jadelafuente@uc.cl</a></address>
+		<h5>AjoFuerte</h5>
+		<p>Estudiante de diseño y orfebrería. Interesada en la edición audiovisual, información de difusión y el trabajo artesanal</p>
+		<address><a href="mailto:jadelafuente@uc.cl">jadelafuente@uc.cl</a></address>
 	</div><!--/dupla segunda-->
 	<hr />
 </div><!--/somos-->
@@ -62,47 +62,47 @@
 <div id="portafolio">
 	<div class="item">
 		<figure><img src="media/foto-01.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>ZALCOR</h4>
+	  	<p>Zona de ALimentación COlgante Ramificada. Proyecto de producto servicio pensado para </p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-02.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
+	  	<h4>Así te ves</h4>
 	  	<p>Nulla pretium non sapien eget fermentum.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-03.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
+	  	<h4>Color a contraluz</h4>
+	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	</div><!--/item-->
+	<div class="item">
+		<figure><img src="media/foto-09.jpg"/></figure>
+	  	<h4>Lámpara de estaño</h4>
 	  	<p>Nulla pretium non sapien eget fermentum.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-04.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
-	</div><!--/item-->
-	<div class="item">
-		<figure><img src="media/foto-04.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
+	  	<h4>Machucao</h4>
 	  	<p>Nulla pretium non sapien eget fermentum.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-05.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
+	  	<h4>Resilia</h4>
 	  	<p>Nulla pretium non sapien eget fermentum.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-06.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
+	  	<h4>Representación de la mujer</h4>
 	  	<p>Nulla pretium non sapien eget fermentum.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-07.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
+	  	<h4>Huevo al vacío</h4>
 	  	<p>Nulla pretium non sapien eget fermentum.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-08.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
+	  	<h4>ARU: Sistema visual de comunicación alternativa </h4>
 	  	<p>Nulla pretium non sapien eget fermentum.</p>
 	</div><!--/item-->
 </div><!--/portafolio-->
