--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
 	<div class="item">
 		<figure><img src="media/foto-01.jpg"/></figure>
 	  	<h4>ZALCOR</h4>
-	  	<p>Zona de ALimentación COlgante Ramificada. Proyecto de producto servicio pensado para </p>
+	  	<p>Zona de ALimentación COlgante Ramificada. Implementación de un nuevo sistema de alimentación para los guacamayos del Zoológico Nacional.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-02.jpg"/></figure>
 	  	<h4>Así te ves</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Intervención en la salida del metro Los Leones, instalación de fotos tomadas a los transeúntes que caminan por esta zona inmersos en sus celulares y su propia realidad.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-03.jpg"/></figure>
 	  	<h4>Color a contraluz</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Intervención en el metro Los Leones que buscaba que las personas que salían de la estación se encontraran en un lugar más ameno y se dieran cuenta de su entorno.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-09.jpg"/></figure>
@@ -83,27 +83,27 @@
 	<div class="item">
 		<figure><img src="media/foto-04.jpg"/></figure>
 	  	<h4>Machucao</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Reinterpretación del tradicional membrillo con sal. Esfera de caramelo que en su interior contenía gomitas ácidas y saladas de membrillo. Para poder disfrutar de las gomitas, hay que romper el caramelo, retomando la tradición del membrillo machucado.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-05.jpg"/></figure>
 	  	<h4>Resilia</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Diseño de un set de higiene femenina reutilizable, pensando en el contexto de camping. Tampón de esponja marina y aplicador plástico reutilizable en un eestuche impermeable.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-06.jpg"/></figure>
 	  	<h4>Representación de la mujer</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Trabajo sobre la representación de la mujer en los videos de música populares. Presentación oral y trabajo escrito para el ramo Nuevas Tendencias en la Audiovisualidad Contemporánea.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-07.jpg"/></figure>
 	  	<h4>Huevo al vacío</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Planimetría para la entrega de Estructura y Materiales que consistía en lanzar un huevo del tercer piso del edificio de diseño.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-08.jpg"/></figure>
 	  	<h4>ARU: Sistema visual de comunicación alternativa </h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>En el contexto de diseño inclusivo para la CONAF (taller 4), diseñamos un sistema visual de comunicación alternativa, pensando principalmente en personas con algún tipo de discapacidad cognitiva.</p>
 	</div><!--/item-->
 </div><!--/portafolio-->
 
