--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 <!--no confundir con la imagen representativa del sitio-->
 <link rel="icon" type="image/png" href="media/favicon.png" />
 <!--ahora vinculamos los estilos-->
-<link href="https://fonts.googleapis.com/css?family=Muli:300,600,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli:300,600,900|Permanent+Marker|Roboto:500,700" rel="stylesheet">
 <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
 <body>
 <div id="contenido">
 <header>
-	<h1>SKT 1</h1>
-	<h2>Nos gusta el diseño gráfico, industrial y la mota</h2>
+	<h1>Pi & Jo</h1>
+	<h2> </h2>
+	<h2>NOS GUSTA COMPLICARNOS LA VIDA PENSANDO</h2>
+	<h2>EN EL UNIVERSO Y NUESTRO LUGAR EN ÉL.</h2>
 </header>
 <video autoplay loop preload="auto" poster="media/video.jpg">
 	<source src="media/video.webm" type="video/webm">
