--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<div class="item">
 		<figure><img src="media/foto-09.jpg"/></figure>
 	  	<h4>Lámpara de estaño</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Proyecto de experimentación con materiales y sus propiedades para generar modelos luminosos. Este es una combinación de dos partes masisas de estaño, posicionados en los polos positivo y negativo de las luces LED que los unen.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-04.jpg"/></figure>
