--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 <meta name="title" content="LAS K">
 <title>LAS K</title>
 <!-- Search Engine -->
-<meta name="Nos gusta el diseño gráfico, industrial y la mota" content="cambiar">
-<meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
+<meta name="bajada" content="NOS GUSTA COMPLICARNOS LA VIDA PENSANDO EN EL UNIVERSO Y NUESTRO">
+<meta name="image" content="media/video.jpg">
 <!-- Schema.org for Google -->
-<meta itemprop="name" content="cambiar">
-<meta itemprop="description" content="cambiar">
-<meta itemprop="image" content="cambiar por una URL, deben poner la imagen en línea">
+<meta itemprop="name" content="PI + JO">
+<meta itemprop="description" content="Conoce algunos de los trabajos de este duo de trabajo">
+<meta itemprop="image" content="1.png">
 <!-- Twitter -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="cambiar">
-<meta name="twitter:description" content="cambiar">
+<meta name="twitter:title" content="pilarfundamental">
+<meta name="twitter:description" content="Cuenta de la integrate Pilar Saavedra">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="cambiar">
-<meta name="og:description" content="cambiar">
+<meta name="og:title" content="josefadlf">
+<meta name="og:description" content="Cuenta facebook de la integrante Josefa de la Fuente">
 <meta name="og:image" content="cambiar">
 <meta name="og:url" content="cambiar">
 <meta name="og:site_name" content="cambiar">
@@ -47,18 +47,20 @@
 <h3>SOBRE NOSOTRAS</h3>
 <div id="somos">
 	<div class="dupla primera">
-		<h4>PILAR SAAVEDRA</h4>
-		<h5>pilarfundamental</h5>
-		<p>Estudiante de diseño, minor en estudios patrimoniales, interesada en diseño gráfico y editorial</p>
-		<address><a href="mailto:pmsaavedra@uc.cl">pmsaavedra@uc.cl</a></address>
-	</div><!--/dupla primera-->
-	<div class="dupla segunda">
-		<h4>JOSEFA DE LA FUENTE</h4>
+		<h4>Josefa de la Fuente</h4>
 		<h5>AjoFuerte</h5>
-		<p>Estudiante de diseño y orfebrería. Interesada en la edición audiovisual, información de difusión y el trabajo artesanal</p>
+		<p>Estudiante de diseño y orfebrería. Interesada en la edición audiovisual, información de difusión y el trabajo artesanal.</p>
 		<address><a href="mailto:jadelafuente@uc.cl">jadelafuente@uc.cl</a></address>
-	</div><!--/dupla segunda-->
-	<hr />
+  </div>
+	<!--/dupla primera-->
+	<div class="dupla segunda">
+		<h4>Pilar Saavedra</h4>
+		<h5>pilarfundamental</h5>
+		<p>Estudiante de diseño, minor en estudios patrimoniales, interesada en diseño gráfico y editorial.</p>
+<address><a href="mailto:pmsaavedra@uc.cl">pmsaavedra@uc.cl</a></address>
+	</div>
+	<!--/dupla segunda-->
+	<h/>
 </div><!--/somos-->
 <h3>PORTAFOLIO</h3>
 <div id="portafolio">
@@ -90,7 +92,7 @@
 	<div class="item">
 		<figure><img src="media/foto-05.jpg"/></figure>
 	  	<h4>Resilia</h4>
-	  	<p>Diseño de un set de higiene femenina reutilizable, pensando en el contexto de camping. Tampón de esponja marina y aplicador plástico reutilizable en un eestuche impermeable.</p>
+	  	<p>Diseño de un set de higiene femenina reutilizable, pensando en el contexto de camping. Tampón de esponja marina y aplicador plástico reutilizable en un estuche impermeable.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-06.jpg"/></figure>
